--- a/templates/index.html
+++ b/templates/index.html
@@ -6,15 +6,12 @@
 	<title>PridePic | Adding LGBTQIA+ Flair to Your Pfps</title>
 	<link rel="icon" type="image/png" href="{{ url_for('static', filename='favicon.ico') }}">
 
-	<!-- Metadata for Google -->
 	<meta name="description" content="Create and customize LGBTQIA+ themed profile pictures easily with PridePic.">
 
-	<!-- Cover image for Discord or other platforms -->
 	<meta property="og:image" content="https://cdn.discordapp.com/attachments/1042401378338865196/1251269549001543902/output204.png?ex=666df713&amp;is=666ca593&amp;hm=1576cd232201112d1471643c70e5c3c9505a42f7d0b171de85ea576decdc68d6">
 
-	<!-- Additional general settings -->
-	<meta name="theme-color" content="#abcdef"> <!-- Define a theme color for browsers -->
-	<meta name="robots" content="index, follow"> <!-- Control how search engines index your content -->
+	<meta name="theme-color" content="#abcdef">
+	<meta name="robots" content="index, follow">
 	<meta name="author" content="Mixy">
 	<link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 	<script>
